--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 
 2017-06-22-petition-network-crawling/1_get_followers/config.py
+2017-06-22-petition-network-crawling/1_get_followers/twitter_rate_limit_status.py
